k3s/docker-registry/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-svc
  namespace: devops
spec:
  selector:
    app: docker-registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
