k3s/docker-registry/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: devops
spec:
  rules:
    - host: registry.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry-svc
                port:
                  number: 5000
